--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sistema-de-campeonato-front",
+  "name": "corteon-front", 
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,18 +7,6 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-  },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
   },
   "private": true,
   "packageManager": "npm@10.8.2",
