--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "outputPath": "dist/corteon-front"  
           },
           "configurations": {
             "production": {
